# example/springboot-webmvc-swagger-asciidoc/src/main/resources/swagger/swagger.json
@@ -60,6 +60,26 @@
         }
       }
     },
+    "/api/v1/project/one/{id}" : {
+      "get" : {
+        "tags" : [ "Проект" ],
+        "operationId" : "selectOneProject",
+        "parameters" : [ {
+          "name" : "id",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "successful operation",
+            "schema" : {
+              "$ref" : "#/definitions/ProjectDTO"
+            }
+          }
+        }
+      }
+    },
     "/api/v1/task/all" : {
       "get" : {
         "tags" : [ "Задача" ],
@@ -73,6 +93,26 @@
               "items" : {
                 "$ref" : "#/definitions/TaskDTO"
               }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/task/one/{id}" : {
+      "get" : {
+        "tags" : [ "Задача" ],
+        "operationId" : "selectOneTask",
+        "parameters" : [ {
+          "name" : "id",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "successful operation",
+            "schema" : {
+              "$ref" : "#/definitions/TaskDTO"
             }
           }
         }
